<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="no_internet_connection_availbel">No internet connection available.</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="font_regular">font/cerapro_regular.ttf</string>
    <string name="font_bold">fonts/cerapro_bold.ttf</string>
    <string name="font_semibold">fonts/cerapro_medium.ttf</string>
    <string name="font_heading">fonts/cerapro_black.ttf</string>
    <string name="font_light">fonts/cerapro_light.ttf</string>
    <string name="font_italic">fonts/Gilroy-Bold-Italic.otf</string>
    <string name="unauthorize_access">Your last login session is expired, please login again.</string>
    <string name="session_expired">Your session has expired</string>
    <string name="login_proceed">Log in to proceed</string>
    <string name="https_400_error">Bad Request</string>
    <string name="http_401_error">Unauthorized access</string>
    <string name="http_403_error">Forbidden or denied access</string>
    <string name="http_404_error">Resource Not Found</string>
    <string name="http_402_error">Payment Required</string>
    <string name="http_405_error">Method Not Allowed</string>
    <string name="http_406_error">Not Acceptable</string>
    <string name="http_408_error">Request Time out</string>
    <string name="http_409_error">conflict in the request</string>
    <string name="http_500_error">Internal Server Error</string>
    <string name="http_501_error">Not Implemented</string>
    <string name="http_503_error">Service Unavailable</string>
    <string name="http_522_error">Connection Timed Out</string>
    <string name="http_520_error">Unknown Error</string>
    <string name="http_526_error">Invalid SSL Certificate</string>
    <string name="http_599_error">Network connect timeout error</string>
    <string name="logout_alert">Log Out</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="stay_logged_in">Stay Logged In</string>
    <string name="logout">Sign Out</string>
    <string name="cancel">Cancel</string>
    <string name="logout_">Logout</string>
    <string name="error_type">Error</string>
    <string name="no_internet">Please check your connection\nand try again.</string>
    <string name="no_notification">No Notification Yet</string>
    <string name="LOADING">Loading...</string>
    <string name="post">Post</string>
    <string name="oops">Alert</string>
    <string name="want_to_delete">Are you sure, you want to delete your account?</string>
    <string name="exit_alert">Exit</string>
    <string name="want_to_exit">Are you sure, you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_money_quickly">Send\nmoney\nquickly</string>
    <string name="your_money_your_way">Your Money, Your Way</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name</string>
    <string name="company_name_">Company Name</string>
    <string name="tax_crib_number">Tax ID</string>
    <string name="registration_number">Chamber Of Commerce</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Login</string>
    <string name="proceed">Proceed</string>
    <string name="agreed_text1">Agree with our</string>
    <string name="agreed_text2">Terms &amp; Conditions </string>
    <string name="agreed_text3">and</string>
    <string name="agreed_text4">Privacy Policy.</string>
    <string name="share_text">Share</string>
    <string name="signup_as_user">Signup </string>
    <string name="signup_as_merchant">Signup</string>
    <string name="signup_as_secondary">Signup </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_text">OR</string>
    <string name="terms_conditions_title">Terms &amp; Conditions</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="send_otp">Send OTP</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_desc">Enter your registered Mobile No./Email,\nwe will send you a code for verification.</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_desc">Please create a new password and confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="home_tab">Home</string>
    <string name="transaction_tab">Transaction</string>
    <string name="scan_tab">Scan</string>
    <string name="profile_tab">Profile</string>
    <string name="more_tab">More</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify_otp_desc">Enter the verification code we have sent you on your Mobile No.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change">Change</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="payment_request">Payment Requests</string>
    <string name="my_card">My Cards</string>
    <string name="security">Security</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="forgot_code_desc">Enter the code we have sent you on your Mobile No.</string>
    <string name="forgot_code_desc_email">Enter the code we have sent you on your Email Address.</string>
    <string name="setup">Setup</string>
    <string name="pin">Change PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="use_screen_lock">Use screen lock</string>
    <string name="change_password">Change Password</string>
    <string name="how_it_work">How It Works</string>
    <string name="faq">FAQ</string>
    <string name="faq_">Faq</string>
    <string name="support">Support</string>
    <string name="supports">Supports</string>
    <string name="notification">Notifications</string>
    <string name="rewards_cashback">Rewards &amp; Cashback</string>
    <string name="logout_text">Logout</string>
    <string name="user_policy">User Policy</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="no_data_found">No Record Found</string>
    <string name="try_again_text">Try Again</string>
    <string name="sync_contact_text">Sync Contact</string>
    <string name="pending_request">Pending Request</string>
    <string name="closed_request">Closed Request</string>
    <string name="message">Message</string>
    <string name="send_txt">Send</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_new_card_">Add New Card</string>
    <string name="card_holder">Card Holder</string>
    <string name="expires">Expires</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_name_on_card">Enter Name On Card</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="closed_text">Closed</string>
    <string name="send_money">Send Money</string>
    <string name="request_money">Request Money</string>
    <string name="recent_transaction">Recent Transactions</string>
    <string name="view_all">View All</string>
    <string name="pay">Pay</string>
    <string name="decline">Decline</string>
    <string name="request">Request</string>
    <string name="my_transaction">My Transactions</string>
    <string name="filter">Filter</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="enter_name_and_number">Enter Name/Mobile Number</string>
    <string name="recent">Recent</string>
    <string name="show_my_code">Show My Code</string>
    <string name="pay_money">Pay Money</string>
    <string name="message_optional">Message(Optional)</string>
    <string name="enter_message">Enter Message</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="card">Card</string>
    <string name="wallet">Wallet</string>
    <string name="debit_card">Debit Card</string>
    <string name="create_card">Credit Card</string>
    <string name="available_for_payment">Available for Payment</string>
    <string name="Rewards_and_cashback">Rewards &amp; Cashback</string>
    <string name="Rewards_history">Rewards History</string>
    <string name="total_rewards_received">Total Reward Received</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="total_wallet_balance">Total Wallet Balance</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="add_money">+Add Money</string>
    <string name="add_money_title">Add Money</string>
    <string name="amount">Amount</string>
    <string name="min_amount">Minimum Amount</string>
    <string name="refill_amount">Refill Amount</string>
    <string name="dollor_sign">$</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_money_through">Add money through</string>
    <string name="successfully_add_money">You have successfully added money to your wallet.</string>
    <string name="successfully_sent_money">You have successfully sent money to</string>
    <string name="successfully_requset_money">Your request for money has been sent successfully to</string>
    <string name="successfully_request_withdrawal">Your withdrawal request has been sent successfully.</string>
    <string name="go_to_home">Go To Home</string>
    <string name="payment_request_title">Payment Request</string>
    <string name="my_request_tab">My Request</string>
    <string name="received_tab">Received</string>
    <string name="sent_tab">Sent</string>
    <string name="decline_tab">Declined</string>
    <string name="my_contacts">My Contacts</string>
    <string name="contacts">Contacts</string>
    <string name="no_contact_found">No Contact Found</string>
    <string name="no_contact_found_or_block_all_recored">No Contact Found\nOr all Monay Contacts are blocked</string>
    <string name="search_contact">Search Contact</string>
    <string name="scan_any_qr_code_to_pay">Scan any QR to pay</string>
    <string name="not_contain_whitespace">Password should not contain whitespace.</string>
    <string name="enter_first_name">Please enter your first name.</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_image_from">Choose Image From</string>
    <string name="document">Document</string>
    <string name="primary_user">Primary User</string>
    <string name="secondary_user">Secondary User</string>
    <string name="merchant">Merchant</string>
    <string name="signup">Signup</string>
    <string name="settings_support_txt"><![CDATA[Settings & \nSupport]]></string>
    <string name="how_do_you_want_to_sign_up_with_moany">How do you want to sign up with Monay</string>
    <string name="your_monay_pin_has_been_set">Your Monay PIN Has Been Set</string>
    <string name="in_future_you_can_change_it_from">In Future You Can Change It From</string>
</resources>