<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background">

    <ImageView
        android:id="@+id/ic_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="@dimen/dp_10"
        android:src="@mipmap/ic_cross_black"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/doneIcon"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_verified"
        android:tint="@color/colorPrimary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doneIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_5"
        android:fontFamily="@font/cerapro_regular"
        android:gravity="center"
        android:text="@string/your_monay_pin_has_been_set"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/size_20"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_titleTxt"
        android:layout_marginTop="@dimen/dp_15"
        android:drawablePadding="@dimen/dp_10"
        android:fontFamily="@font/cerapro_medium"
        android:gravity="center"
        android:text="@string/in_future_you_can_change_it_from"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/size_14" />

    <LinearLayout
        android:id="@+id/tv_merchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:text="@string/more_tab"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/size_14"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:text="   >   "
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_14"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:text="@string/settings_support_txt"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/size_14"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:text="   >   "
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_14"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:text="@string/security"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/size_14"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_merchant"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/rounded_btn_selector_yellowish"
        android:fontFamily="@font/cerapro_medium"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/size_18" />
</RelativeLayout>