<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/rl_submit_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dr_bottom_navigation_bg">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/choose_image_from"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_18" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/tv_header"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/take_photo"
            android:textColor="@color/gray"
            android:textSize="@dimen/size_16" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/takePhoto"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/chooseFromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line2"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/choose_from_gallery"
            android:textColor="@color/gray"
            android:textSize="@dimen/size_16" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/chooseFromGallery"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/chooseDocument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line3"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/document"
            android:textColor="@color/gray"
            android:textSize="@dimen/size_16"
            android:visibility="gone" />

        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/chooseDocument"
            android:background="@color/gray"
            android:visibility="gone" />

        <TextView
            android:id="@+id/cancelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line4"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="@dimen/size_16" />


    </RelativeLayout>


</RelativeLayout>