<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:padding="@dimen/dp_10">

    <ImageView
        android:id="@+id/ic_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_15"
        android:padding="@dimen/dp_10"
        android:src="@mipmap/ic_cross_black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_15"
        android:fontFamily="@font/cerapro_bold"
        android:text="@string/signup"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/size_18" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_how_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_text"
        android:layout_marginStart="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_35"
        android:fontFamily="@font/cerapro_regular"
        android:text="@string/how_do_you_want_to_sign_up_with_moany"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/size_16" />

    <LinearLayout
        android:id="@id/ll_primary_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_how_text"
        android:layout_marginStart="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_35"
        android:background="@drawable/blue_btn_selector"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_user"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:src="@mipmap/ic_user_active">

        </androidx.appcompat.widget.AppCompatImageView>

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_20"
            android:drawablePadding="@dimen/dp_10"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:paddingTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20"
            android:text="@string/primary_user"
            android:textAllCaps="false"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/size_16" />

    </LinearLayout>

    <LinearLayout
        android:id="@id/ll_secondary_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_primary_user"
        android:layout_marginStart="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_35"
        android:background="@drawable/blue_btn_selector"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_secondary_user"
            android:layout_width="@dimen/dp_50"
            android:layout_gravity="center"
            android:layout_height="@dimen/dp_50"
            android:src="@mipmap/ic_user_deactivate">

        </androidx.appcompat.widget.AppCompatImageView>

        <TextView
            android:id="@+id/tv_secondary_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_20"
            android:drawablePadding="@dimen/dp_10"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:paddingTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20"
            android:text="@string/secondary_user"
            android:textAllCaps="false"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/size_16" />

    </LinearLayout>


    <LinearLayout
        android:id="@id/ll_merchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_secondary_user"
        android:layout_marginStart="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_35"
        android:background="@drawable/blue_btn_selector"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_merchant"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:src="@mipmap/ic_merchant_deactive">

        </androidx.appcompat.widget.AppCompatImageView>

        <TextView
            android:id="@+id/tv_merchant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_20"
            android:drawablePadding="@dimen/dp_10"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:paddingTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20"
            android:text="@string/merchant"
            android:textAllCaps="false"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/size_16" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_merchant"
        android:layout_marginStart="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_35"
        android:layout_marginBottom="@dimen/dp_35"
        android:background="@drawable/rounded_btn_selector_yellowish"
        android:fontFamily="@font/cerapro_medium"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/signup_as_merchant"
        android:textAllCaps="false"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/size_16" />
</RelativeLayout>